--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: https://nizatto.com
 
 # Site settings
-title: Awesome Title
+title: Nizatto Digital Solutions
 email: hello@nizatto.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
@@ -47,17 +47,17 @@ social:
     url: http://twitter.com/jekyllrb
   - title: facebook
     url:
-  - title: stack-overflow
+  - title: instagram
     url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
+  - title: linkedin
     url: http://bitbucket.org/jekyll
   - title: github
     url: http://github.com/jekyll
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 120 Clarence Road
+  - line: Horsham RH10 1AB
 
 # Build settings
 markdown: kramdown
