--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ people:
       url: #
 - name: Will
   pic: 3
-  position: Wordpress Wizard
+  position: Creative Director
   social:
     - title: twitter
       url: #
