--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,28 @@ description: "Write an awesome description for your new site here. You can edit 
 
 # Team names, titles and social links
 people:
-- name: Lauren
+- name: Will
   pic: 1
+  position: Creative Director
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: stack-overflow
+      url: #
+- name: Ryan
+  pic: 2
+  position: Operations Director
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: stack-overflow
+      url: #
+- name: Lauren
+  pic: 3
   position: Project Champion
   social:
     - title: twitter
@@ -19,18 +39,8 @@ people:
     - title: stack-overflow
       url: #
 - name: David
-  pic: 2
-  position: Web Design
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
-- name: Will
-  pic: 3
-  position: Creative Director
+  pic: 4
+  position: Web Developer
   social:
     - title: twitter
       url: #
