--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,17 @@ people:
       url: #
     - title: stack-overflow
       url: #
+ - name: Frankie
+  pic: 4
+  position: Happiness Coordinator
+  social:
+    - title: twitter
+      url: #
+    - title: facebook
+      url: #
+    - title: stack-overflow
+      url: #
+
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
